--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
     <div id="app"></div>
    
     <script type="module" src="/src/main.js"></script>
+
+    <script src="./src/assets/js/jquery.js"></script>
+    <script src="./src/assets/js/popper.min.js"></script>
+    <!-- <script src="./src/assets/js/bootstrap.min.js"></script> -->
+    <script src="./src/assets/js/wow.min.js"></script>
+    <script src="./src/assets/js/tilt.jquery.min.js"></script>
+    <script src="./src/assets/js/owl.js"></script>
+    <script src="./src/assets/js/aos.js"></script>
+    <script src="./src/assets/js/slick.js"></script>
+    <script src="./src/assets/js/jquery.barfiller.js"></script>
+    <script src="./src/assets/js/parallax-scroll.js"></script>
+    <script src="./src/assets/js/jquery.paroller.min.js"></script>
+    <script src="./src/assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="./src/assets/js/side-demo.js"></script>
+    <script src="./src/assets/js/script.js"></script>
   </body>
 </html>
