--- a/index.html
+++ b/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><script type="text/javascript">
-      (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
       })(window, document, "clarity", "script", "kmcr3pmwj9");
-  </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    </script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 
     <title>Cosit Togo</title>
   </head>
-  <body>
+  <body class="dia-home">
     <div id="app"></div>
-   
+
     <script type="module" src="/src/main.js"></script>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script type="module" src="https://unpkg.com/@popperjs/core@2"></script>
+    <script type="module" src="/src/assets/js/jquery.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script> -->
 
+    <!-- <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script> -->
 
-    <!-- <script src="./src/assets/js/jquery.js"></script> -->
-    <!-- <script type="module" src="/src/assets/js/popper.min.js"></script> -->
+    <script type="module" src="/src/assets/js/popper.min.js"></script>
     <!-- <script type="module" src="./src/assets/js/bootstrap.min.js"></script> -->
     <!-- <script type="module" src="/src/assets/js/wow.min.js"></script> -->
     <script type="module" src="/src/assets/js/tilt.jquery.min.js"></script>
     <!-- <script type="module" src="/src/assets/js/owl.js"></script> -->
     <!-- <script type="module" src="/src/assets/js/aos.js"></script> -->
-     <script type="module" src="/src/assets/js/slick.js"></script>
-    <script type="module" src="/src/assets/js/jquery.barfiller.js"></script>
+    <script type="module" src="/src/assets/js/slick.js"></script>
+    <!-- <script type="module" src="/src/assets/js/jquery.barfiller.js"></script> -->
     <script type="module" src="/src/assets/js/parallax-scroll.js"></script>
-    <script type="module" src="/src/assets/js/jquery.paroller.min.js"></script> 
-    <script type="module" src="/src/assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script type="module" src="/src/assets/js/jquery.paroller.min.js"></script>
+    <!-- <script
+      type="module"
+      src="/src/assets/js/jquery.mCustomScrollbar.concat.min.js"
+    ></script> -->
     <script type="module" src="/src/assets/js/side-demo.js"></script>
-    <script type="module" src="/src/assets/js/script.js"></script>
+    <!-- <script type="module" src="/src/assets/js/script.js"></script> -->
   </body>
 </html>
